# this-cli

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  commands.md  contributing.md
src/: config.rs  main.rs  test_helpers.rs
src/codegen/: introspect.rs  mod.rs  typescript.rs
src/commands/: add_entity.rs  add_event_flow.rs  add_link.rs  add_sink.rs  add_target.rs  build.rs  completions.rs  dev.rs  doctor.rs  generate.rs  info.rs  init.rs  mod.rs
src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs  tools.rs
src/templates/: mod.rs
src/templates/desktop/: capabilities.json.tera  tauri-cargo.toml.tera  tauri-main.rs.tera  tauri.conf.json.tera
src/templates/entity/: descriptor.rs.tera  handlers.rs.tera  lmdb_store.rs.tera  migration.sql.tera  mod.rs.tera  model.rs.tera  model_validated.rs.tera  mongodb_store.rs.tera  mysql_store.rs.tera  neo4j_store.rs.tera  postgres_store.rs.tera  scylladb_store.rs.tera  store.rs.tera
src/templates/mobile/: capacitor-gitignore.tera  capacitor-package.json.tera  capacitor.config.ts.tera
src/templates/project/: Cargo.toml.tera  auth.yaml.tera  embedded_frontend.rs.tera  entities_mod.rs.tera  events.yaml.tera  links.yaml.tera  main.rs.tera  module.rs.tera  stores.rs.tera
src/templates/webapp/: App.css.tera  App.tsx.tera  package.json.tera  vite.config.ts.tera
src/templates/workspace/: Dockerfile.tera  this.yaml.tera
src/utils/: file_writer.rs  markers.rs  mod.rs  naming.rs  output.rs  project.rs
tests/: integration.rs  mcp_integration.rs
