[package]
name = "this-cli"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "this"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tera = "1"
colored = "2"
anyhow = "1"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
