[package]
name = "this-cli"
version = "0.0.3"
edition = "2024"
authors = ["Riviere Théotime <t@ffs.holdings>"]
license = "MIT OR Apache-2.0"
description = "CLI toolkit for the this-rs entity-relationship framework — scaffold, develop, build, and expose projects via MCP"
repository = "https://github.com/this-rs/this"
keywords = ["cli", "entity", "framework", "scaffolding", "mcp"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
readme = "README.md"

[[bin]]
name = "this"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tera = "1"
colored = "2"
anyhow = "1"
toml_edit = "0.22"
ctrlc = "3"
regex = "1"

[dev-dependencies]
tempfile = "3"
